# home_work_19.2

./: .env  .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_slug.py  0003_alter_article_options.py  0004_alter_article_options.py
blog/templates/blog/: article.html  blog.html  confirm.html  new_article.html
blog/templatetags/: my_tags.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: category.json  products.json
catalog/management/commands/: create_group_content_manager.py  (+1 more)
catalog/migrations/: 0001_initial.py  0002_products_manufactured_at.py  0003_remove_products_manufactured_at.py  0004_alter_products_created_at_alter_products_updated_at.py  0005_category_has_products_alter_products_category.py  0006_products_slug_products_view_count.py  0007_version.py  0008_alter_version_product.py  0009_alter_category_has_products_alter_version_is_active.py  0010_alter_version_is_active.py  0011_products_user.py  0012_alter_version_product.py  0013_products_is_published.py  0014_alter_products_options.py
catalog/templates/: catalog.html  categories.html  contacts.html  index.html  new_product.html  product_item.html
catalog/templatetags/: my_tags.py
config/: cached.py  settings.py  urls.py
static/css/: custom_card.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_user_first_name_user_last_name.py  0004_user_token.py
(+13 files in other folders)
