[tool.poetry]
name = "home-work"
version = "0.1.0"
description = "Домашняя работа 19.2 Django"
authors = ["alextk37 <alextk37@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.26.0"
django-redis = "^5.4.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
